--- a/styles/styles.css
+++ b/styles/styles.css
@@ -36,6 +36,12 @@ body {
   color: #000;
 }
 
+.img {
+  max-width: 100%;
+  height: auto;
+  object-fit: cover;
+}
+
 .visually-hidden {
   position: absolute;
   width: 1px;
@@ -61,10 +67,13 @@ body {
 
 .logo {
   margin-right: 28px;
+  margin-bottom: -6px;
 }
 
 .logo-pic {
+  position: relative;
   display: block;
+  z-index: 1;
 }
 
 .navigation {
@@ -74,9 +83,10 @@ body {
 .navigation-list {
   margin: 0;
   padding: 0;
-  width: 339px;
+  width: 600px;
   list-style-type: none;
   display: flex;
+  flex-wrap: wrap;
 }
 
 .navigation-link {
@@ -87,12 +97,31 @@ body {
   text-decoration: none;
   text-transform: capitalize;
 
-  padding: 0 16px 0;
+  padding: 20px 16px;
 }
 
 .user-menu {
-  width: 286px;
+  width: 268px;
   display: flex;
+  align-items: center;
+  flex-wrap: wrap;
+}
+
+.likes {
+  margin-right: 20px;
+  background-image: url("../images/svg-icons/like.svg");
+}
+
+.search {
+  background-image: url("../images/svg-icons/search.svg");
+}
+
+.search,
+.likes {
+  width: 44px;
+  height: 64px;
+  background-repeat: no-repeat;
+  background-position: center;
 }
 
 .button {
@@ -110,7 +139,6 @@ body {
 }
 
 .page-header-button {
-  margin-left: auto;
   padding: 8px 34px;
 }
 
@@ -246,6 +274,7 @@ body {
   padding: 0;
   list-style-type: none;
   display: flex;
+  flex-wrap: wrap;
 }
 
 .services-item {
@@ -339,6 +368,7 @@ body {
 
 .subscribe-form {
   display: flex;
+  flex-wrap: wrap;
   width: 684px;
 }
 
@@ -349,15 +379,20 @@ body {
   line-height: 36px;
   background-color: #82b3d3;
   border: none;
+  border-radius: 0px 4px 4px 0px;
 }
 
 .subscribe-email {
+  padding: 12px 20px;
   flex-grow: 1;
   font-family: "PT Sans", "Arial", sans-serif;
   font-size: 18px;
   font-weight: 400;
   line-height: 24px;
   color: #000;
+  border: none;
+  border-radius: 4px 0px 0px 4px;
+  background-color: #f2f2f2;
 }
 
 .page-footer {
@@ -373,6 +408,7 @@ body {
   width: 1060px;
   display: flex;
   justify-content: space-between;
+  flex-wrap: wrap;
 }
 
 .contacts-phone {
@@ -387,6 +423,31 @@ body {
   margin: 0;
   padding: 0;
   list-style-type: none;
+  display: flex;
+  flex-wrap: wrap;
+}
+
+.social-item {
+  display: flex;
+}
+
+.social-link {
+  width: 47px;
+  height: 40px;
+  background-repeat: no-repeat;
+  background-position: center;
+}
+
+.social-link-vk {
+  background-image: url("../images/svg-icons/social-vk.svg");
+}
+
+.social-link-tg {
+  background-image: url("../images/svg-icons/social-tg.svg");
+}
+
+.social-link-youtube {
+  background-image: url("../images/svg-icons/social-youtube.svg");
 }
 
 .wrapper {
@@ -417,8 +478,22 @@ body {
   display: flex;
 }
 
+.breadcrumbs-item {
+  display: flex;
+  align-items: center;
+}
+
 .breadcrumbs-link {
   font-size: 16px;
+}
+
+.breadcrumbs-link-index {
+  width: 12px;
+  height: 12px;
+  background-image: url("../images/svg-icons/breadcrumb-icon.svg");
+  background-repeat: no-repeat;
+  background-position: center;
+  margin-right: 10px;
 }
 
 .hotels-filter {
@@ -428,12 +503,8 @@ body {
 
 .hotels-filter-form {
   display: flex;
-  justify-content: space-between;
-}
-
-.hotels-filter-wrapper {
-  display: flex;
   gap: 70px;
+  flex-wrap: wrap;
 }
 
 .hotels-filter-group {
@@ -445,17 +516,14 @@ body {
   border: none;
 }
 
-.hotels-filter-group-range {
-  width: 100%;
+.type-hotel {
+  margin-right: 70px;
 }
 
 .hotels-filter-title {
-  margin-bottom: 32px;
+  margin: 0 0 32px;
+  font-weight: 700;
   padding: 0;
-}
-
-.hotels-filter-title h3 {
-  margin: 0;
   font-size: 20px;
   line-height: 24px;
   text-transform: capitalize;
@@ -463,6 +531,8 @@ body {
 
 .control {
   margin-bottom: 16px;
+  line-height: 23px;
+  position: relative;
 }
 
 .control:last-child {
@@ -474,11 +544,16 @@ body {
   font-weight: 700;
   font-size: 18px;
   line-height: 24px;
+  background-color: #f2f2f2;
 }
 
 .control-input-text {
+  color: #000;
   line-height: 24px;
   opacity: 0.3;
+  position: absolute;
+  top: 12px;
+  right: 20px;
 }
 
 .range-input-wrapper {
@@ -542,11 +617,14 @@ body {
 
 .hotel-catalog-wrapper {
   display: flex;
+  align-items: center;
+  flex-wrap: wrap;
   margin-bottom: 40px;
 }
 
 .hotels-catalog-result {
   margin: 0 auto 0 0;
+  width: 338px;
   font-size: 30px;
   line-height: 36px;
   font-weight: 700;
@@ -555,18 +633,59 @@ body {
 
 .select-control {
   margin: 0 auto 0 0;
+  padding: 10px 20px;
   width: 292px;
   font-family: "PT Sans", "Arial", sans-serif;
   font-size: 18px;
   font-weight: 400;
   line-height: 21px;
+  border-radius: 4px;
+  border: 2px solid #e5e5e5;
 }
 
-.select-buttons {
+.select-control option {
+  padding: 14px 20px;
+}
+
+.select-list {
   padding: 0;
   margin: 0;
   list-style-type: none;
   display: flex;
+  gap: 8px;
+  flex-wrap: wrap;
+  width: 160px;
+}
+
+.select-item {
+  display: flex;
+}
+
+.select-button {
+  width: 48px;
+  height: 48px;
+  padding: 0;
+  border: 2px solid #e5e5e5;
+  border-radius: 4px;
+  background-color: transparent;
+  background-repeat: no-repeat;
+  background-position: center;
+}
+
+.select-button-active {
+  border-color: #000;
+}
+
+.select-button-cards {
+  background-image: url("../images/svg-icons/select-icon-cards.svg");
+}
+
+.select-button-separate {
+  background-image: url("../images/svg-icons/select-icon-separate.svg");
+}
+
+.select-button-list {
+  background-image: url("../images/svg-icons/select-icon-list.svg");
 }
 
 .hotels-list {
@@ -575,13 +694,32 @@ body {
   list-style-type: none;
   display: flex;
   flex-wrap: wrap;
+  gap: 20px;
 }
 
 .hotel-item {
   padding: 20px;
   display: flex;
   flex-direction: column;
+  justify-content: space-between;
+  width: 340px;
+  min-height: 438px;
+  border: 1px solid #e6e6e6;
+  border-radius: 4px;
+}
+
+.hotel-item-link {
+  display: flex;
+  flex-direction: column;
   gap: 16px;
+  color: #000;
+  text-decoration: none;
+}
+
+.hotel-photo {
+  object-fit: cover;
+  width: 300px;
+  height: 212px;
 }
 
 .hotel-name {
@@ -593,6 +731,7 @@ body {
 .hotel-item-wrapper {
   display: flex;
   justify-content: space-between;
+  flex-wrap: wrap;
 }
 
 .hotel-type,
@@ -601,7 +740,7 @@ body {
 }
 
 .favourite-button,
-.favourite-button-chosen {
+.favourite-button-active {
   font-family: "PT Sans", "Arial", sans-serif;
 }
 
@@ -609,7 +748,7 @@ body {
   background-color: #82b3d3;
 }
 
-.favourite-button-chosen {
+.favourite-button-active {
   background-color: #7db54f;
 }
 
@@ -643,6 +782,7 @@ body {
   margin: 0;
   list-style-type: none;
   display: flex;
+  flex-wrap: wrap;
   gap: 8px;
 }
 
